# tinyxcp

./: .gitmodules  CMakeLists.txt  README.md
source/src/sample_generic_loading_dynamic/: CMakeLists.txt  CommandReader.c  DeviceInitializer.c  DeviceInitializer.h  DeviceMonitor.c  main.c  tiny_print_mem.c  tiny_sleep.c
source/src/sample_generic_loading_dynamic/device/definition/: DeviceInitializer.c  DeviceInitializer.h
source/src/sample_generic_loading_dynamic/device/handler/: OnActionInvoke.c
source/src/sample_generic_loading_dynamic/device/initializer/: InitializeConfiguration.c  InitializeConfiguration.h
source/src/sample_generic_loading_dynamic/handler/: OnActionInvoke.c  OnPropertyGet.c  OnPropertySet.c
source/src/sample_generic_loading_dynamic/handler/S_1_DeviceInformation/: S_1_DeviceInformation_doGet.c  doGet_1_DeviceInformation.c  doGet_1_DeviceInformation.h  doInvoke_1_DeviceInformation.c  doInvoke_1_DeviceInformation.h  doSet_1_DeviceInformation.c  doSet_1_DeviceInformation.h
source/src/sample_generic_loading_dynamic/handler/S_2_ModbusController/: S_2_ModbusController_doInvoke.h  S_2_ModbusController_doSet.h  doInvoke_2_ModbusController.c  doInvoke_2_ModbusController.h
source/src/sample_generic_loading_dynamic/handler/S_3_ModbusUnitDefinitionManagement/: S_3_ModbusUnitDefinitionManagement_doInvoke.c  S_3_ModbusUnitDefinitionManagement_doSet.c  doInvoke_3_ModbusUnitDefinitionManagement.c  doInvoke_3_ModbusUnitDefinitionManagement.h
source/src/sample_generic_loading_dynamic/handler/S_4_ModbusUnitManagement/: doInvoke_4_ModbusUnitManagement.c  doInvoke_4_ModbusUnitManagement.h
source/src/sample_generic_loading_dynamic/handler/S_5_ModbusCollector/: S_5_ModbusCollector_doGet.c  doInvoke_5_ModbusCollector.c  doInvoke_5_ModbusCollector.h
source/src/sample_generic_loading_dynamic/iid/: IID.h
source/src/sample_generic_loading_static/: CMakeLists.txt  DeviceMonitor.c  DeviceStack.c  Runner.h  main.c
source/src/sample_generic_loading_static/device/: A_2_2_ReadCoils.c  A_2_4_WriteMultipleCoils.c  A_2_4_WriteMultipleCoils.h  A_2_5_ReadInputRegisters.c  A_2_7_WriteSingleHoldingRegister.h  A_2_8_WriteMultipleHoldingRegisters.h  A_3_2_RemoveUnitDefinition.c  A_3_2_RemoveUnitDefinition.h  A_3_3_ModifyUnitDefinition.c  A_3_4_GetUnitDefinition.c  A_4_3_ModifyUnit.c  A_5_1_StartCollecting.c  E_2_1_InputRegistersChanged.c  ModbusMaster.c  ModbusMaster.h  P_1_2_Model.c  P_2_10_RegisterValues.c  P_2_1_UnitId.c  P_2_2_OffsetAddress.c  P_2_2_OffsetAddress.h  P_2_3_NumberOfDiscreteInputs.c  P_2_5_NumberOfRegisters.c  P_2_6_NumberOfBytes.c  P_2_7_CoilValue.c  P_2_8_CoilValues.h  P_2_9_DiscreteInputValues.c  P_3_1_UnitDefinitionId.h  P_3_2_UnitDefinitionName.c  P_3_2_UnitDefinitionName.h  P_3_4_UnitDefinitionContent.c  P_3_5_UnitDefinitionCount.c  P_3_5_UnitDefinitionCount.h  P_3_6_UnitDefinitionIndex.c  P_4_1_UnitId.c  P_4_1_UnitId.h  P_4_2_UnitName.c  P_4_4_UnitDefinitionId.c  P_4_5_UnitCount.c  P_4_5_UnitCount.h  P_4_6_UnitIndex.c  (+3 more)
source/src/sample_generic_loading_static/device/definition/: A_2_1_ReadDiscreteInputs.h  A_2_3_WriteSingleCoil.c  A_2_3_WriteSingleCoil.h  A_3_3_ModifyUnitDefinition.h  (+46 more)
source/src/sample_generic_loading_static/handler/: OnActionInvoke.c  OnPropertyGet.c  OnPropertySet.c
source/src/sample_generic_loading_static/iid/: IID.h
source/src/sample_generic_local_loading_dynamic/: CMakeLists.txt
source/src/sample_generic_local_loading_static/: CMakeLists.txt  HexString.h  ModFrame.c  ModFrame.h  Modbus.c  main.c
source/src/sample_lightbulb/: CMakeLists.txt  CommandReader.c  CommandReader.h  DeviceStack.c  DeviceStack.h  locker.c  locker.h  main.c  task_iot.c  task_iot.h  task_light.c  task_light.h
source/src/sample_lightbulb/device/: IotService.c  IotService.h
source/src/xcp-websocket/: CMakeLists.txt  XcpwsClientRuntime.c  XcpwsClientRuntime.h  XcpwsServerRuntime.c  XcpwsServerRuntime.h
source/src/xcp-websocket/client/: XcpwsClient.c  XcpwsClient.h
source/src/xcp-websocket/codec-binary/: WebSocketBinaryFrameCodec.c  WebSocketBinaryFrameCodec.h  WebSocketBinaryFrameCodecContext.h  WebSocketBinaryFrameCodecType.h  WebSocketBinaryFrameDecoder.c  WebSocketBinaryFrameEncoder.c
source/src/xcp-websocket/codec-message/: MessageCodec.c  MessageCodec.h  MessageCodecContext.c  MessageCodecContext.h
source/src/xcp-websocket/server/: XcpwsBonjour.c  XcpwsBonjour.h  XcpwsServer.c  XcpwsServer.h  XcpwsServerContext.c  XcpwsServerContext.h
tinyxcp/source/src/: CMakeLists.txt
tinyxcp/source/src/sample_gateway_ws/: CMakeLists.txt  Gateway.c  Gateway.h  main.c
tinyxcp/source/src/sample_generic/: CMakeLists.txt  MyDevice.c  sample.c
tinyxcp/source/src/sample_generic_loading_dynamic/: CMakeLists.txt  CommandReader.c  CommandReader.h  DeviceInitializer.c  DeviceInitializer.h  DeviceMonitor.c  DeviceMonitor.h  DeviceStack.c  DeviceStack.h  Runner.c  main.c
tinyxcp/source/src/sample_generic_loading_static/: Runner.c
tinyxcp/source/src/sample_generic_local_loading_dynamic/: ModbusDB.c  Runner.c
tinyxcp/source/src/sample_generic_local_loading_static/: DeviceCreator.c  DeviceCreator.h  ModbusDB.h  Runner.h
tinyxcp/source/src/sample_generic_ws/: CMakeLists.txt  Gateway.h  MyDevice.c  sample.c
tinyxcp/source/src/sample_plc/: CMakeLists.txt  FanController.c  FanController.h  HexString.c  ModFrame.h  Modbus.c  Runner.c  sample.c
tinyxcp/source/src/sample_plc_local/: CMakeLists.txt  Modbus.h  sample.c
tinyxcp/source/src/xcmd-websocket/: CMakeLists.txt
tinyxcp/source/src/xcp-common/: CMakeLists.txt  XcpClientVerifier.c  XcpClientVerifier.h
tinyxcp/source/src/xcp-message/: CMakeLists.txt  XcpMessage.c  XcpMessage.h
tinyxcp/source/src/xcp-message-codec/: CMakeLists.txt  XcpMessageCodec.c  XcpMessageCodec.h
tinyxcp/source/src/xcp-tcp/: CMakeLists.txt  XcpClientRuntime.c  XcpClientRuntime.h  XcpServerRuntime.h
tinyxcp/source/src/xcp-tcp-deprecated/: XcpServerRuntime.c
tinyxcp/source/src/xcp-webcmd/: CMakeLists.txt
tinyxcp/source/src/xcp-websocket/: CMakeLists.txt  XcpwsClientRuntime.c  XcpwsClientRuntime.h  XcpwsServerRuntime.c
(+383 files in other folders)
