#-----------------------------------------------------------------------------
#
# sample_generic_loading_dynamic
#
#-----------------------------------------------------------------------------

SET(SRC
        handler/OnActionInvoke.h
        handler/OnActionInvoke.c
        handler/OnPropertyGet.h
        handler/OnPropertyGet.c
        handler/OnPropertySet.h
        handler/OnPropertySet.c
        handler/S_1_DeviceInformation/doInvoke_1_DeviceInformation.h
        handler/S_1_DeviceInformation/doInvoke_1_DeviceInformation.c
        handler/S_1_DeviceInformation/doGet_1_DeviceInformation.h
        handler/S_1_DeviceInformation/doGet_1_DeviceInformation.c
        handler/S_1_DeviceInformation/doSet_1_DeviceInformation.h
        handler/S_1_DeviceInformation/doSet_1_DeviceInformation.c
        handler/S_2_ModbusController/doInvoke_2_ModbusController.h
        handler/S_2_ModbusController/doInvoke_2_ModbusController.c
        handler/S_3_ModbusUnitDefinitionManagement/doInvoke_3_ModbusUnitDefinitionManagement.h
        handler/S_3_ModbusUnitDefinitionManagement/doInvoke_3_ModbusUnitDefinitionManagement.c
        handler/S_4_ModbusUnitManagement/doInvoke_4_ModbusUnitManagement.h
        handler/S_4_ModbusUnitManagement/doInvoke_4_ModbusUnitManagement.c
        handler/S_5_ModbusCollector/doInvoke_5_ModbusCollector.h
        handler/S_5_ModbusCollector/doInvoke_5_ModbusCollector.c
        print/PrintValue.h
        print/PrintValue.c
        iid/IID.h
        DeviceMonitor.h
        DeviceMonitor.c
        DeviceStack.h
        DeviceStack.c
        DeviceInitializer.h
        DeviceInitializer.c
        CommandReader.h
        CommandReader.c
        main.c
        tiny_print_mem.c
        tiny_sleep.c
        )

ADD_EXECUTABLE(sample_generic_loading_dynamic ${SRC})
TARGET_LINK_LIBRARIES(sample_generic_loading_dynamic
        xcpws_static
        xcp_webcmd_static
        xcp_message_codec_static
        xcp_message_static
        xcp_common_static
        ${DEPENDENCE_LIB})
