#-----------------------------------------------------------------------------
#
# sample_generic_loading_dynamic
#
#-----------------------------------------------------------------------------

SET(DEVICE_SRC
        device/iid/IID.h
        device/definition/DeviceInitializer.h
        device/definition/DeviceInitializer.c
        device/handler/OnActionInvoke.h
        device/handler/OnActionInvoke.c
        device/handler/OnPropertyGet.h
        device/handler/OnPropertyGet.c
        device/handler/OnPropertySet.h
        device/handler/OnPropertySet.c
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doGet.h
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doGet.c
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doSet.h
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doSet.c
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doInvoke.h
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doInvoke.c
        device/handler/S_2_ModbusController/S_2_ModbusController_doGet.h
        device/handler/S_2_ModbusController/S_2_ModbusController_doGet.c
        device/handler/S_2_ModbusController/S_2_ModbusController_doSet.h
        device/handler/S_2_ModbusController/S_2_ModbusController_doSet.c
        device/handler/S_2_ModbusController/S_2_ModbusController_doInvoke.h
        device/handler/S_2_ModbusController/S_2_ModbusController_doInvoke.c
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doGet.h
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doGet.c
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doSet.h
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doSet.c
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doInvoke.h
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doInvoke.c
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doGet.h
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doGet.c
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doSet.h
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doSet.c
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doInvoke.h
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doInvoke.c
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doGet.h
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doGet.c
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doSet.h
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doSet.c
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doInvoke.h
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doInvoke.c
        device/initializer/InitializeConfiguration.h
        device/initializer/InitializeConfiguration.c
        device/print/PrintValue.h
        device/print/PrintValue.c
        )

SET(SRC
        ${DEVICE_SRC}
        DeviceMonitor.h
        DeviceMonitor.c
        DeviceStack.h
        DeviceStack.c
        CommandReader.h
        CommandReader.c
        tiny_print_mem.c
        tiny_sleep.c
        main.c
        )

ADD_EXECUTABLE(sample_generic_loading_dynamic ${SRC})
TARGET_LINK_LIBRARIES(sample_generic_loading_dynamic
        xcpws_static
        xcp_webcmd_static
        xcp_message_codec_static
        xcp_message_static
        xcp_common_static
        ${DEPENDENCE_LIB})
