#-----------------------------------------------------------------------------
#
# sample_generic_loading_static
#
#-----------------------------------------------------------------------------

SET(DEVICE_SRC
        device/ModbusMaster.h
        device/ModbusMaster.c
        device/S_1_DeviceInformation.h
        device/S_1_DeviceInformation.c
        device/P_1_1_Manufacturer.h
        device/P_1_1_Manufacturer.c
        device/P_1_2_Model.h
        device/P_1_2_Model.c
        device/P_1_3_SerialNumber.h
        device/P_1_3_SerialNumber.c
        device/P_1_4_FirmwareRevision.h
        device/P_1_4_FirmwareRevision.c
        device/S_2_ModbusController.h
        device/S_2_ModbusController.c
        device/P_2_1_UnitId.h
        device/P_2_1_UnitId.c
        device/P_2_2_OffsetAddress.h
        device/P_2_2_OffsetAddress.c
        device/P_2_3_NumberOfDiscreteInputs.h
        device/P_2_3_NumberOfDiscreteInputs.c
        device/P_2_4_NumberOfCoils.h
        device/P_2_4_NumberOfCoils.c
        device/P_2_5_NumberOfRegisters.h
        device/P_2_5_NumberOfRegisters.c
        device/P_2_6_NumberOfBytes.h
        device/P_2_6_NumberOfBytes.c
        device/P_2_7_CoilValue.h
        device/P_2_7_CoilValue.c
        device/P_2_8_CoilValues.h
        device/P_2_8_CoilValues.c
        device/P_2_9_DiscreteInputValues.h
        device/P_2_9_DiscreteInputValues.c
        device/P_2_10_RegisterValues.h
        device/P_2_10_RegisterValues.c
        device/P_2_11_RegisterValue.h
        device/P_2_11_RegisterValue.c
        device/A_2_1_ReadDiscreteInputs.h
        device/A_2_1_ReadDiscreteInputs.c
        device/A_2_2_ReadCoils.h
        device/A_2_2_ReadCoils.c
        device/A_2_3_WriteSingleCoil.h
        device/A_2_3_WriteSingleCoil.c
        device/A_2_4_WriteMultipleCoils.h
        device/A_2_4_WriteMultipleCoils.c
        device/A_2_5_ReadInputRegisters.h
        device/A_2_5_ReadInputRegisters.c
        device/A_2_6_ReadMultipleHoldingRegisters.h
        device/A_2_6_ReadMultipleHoldingRegisters.c
        device/A_2_7_WriteSingleHoldingRegister.h
        device/A_2_7_WriteSingleHoldingRegister.c
        device/A_2_8_WriteMultipleHoldingRegisters.h
        device/A_2_8_WriteMultipleHoldingRegisters.c
        device/E_2_1_InputRegistersChanged.h
        device/E_2_1_InputRegistersChanged.c
        device/S_3_ModbusUnitDefinitionManagement.h
        device/S_3_ModbusUnitDefinitionManagement.c
        device/P_3_1_UnitDefinitionId.h
        device/P_3_1_UnitDefinitionId.c
        device/P_3_2_UnitDefinitionName.h
        device/P_3_2_UnitDefinitionName.c
        device/P_3_3_UnitDefinitionDescription.h
        device/P_3_3_UnitDefinitionDescription.c
        device/P_3_4_UnitDefinitionContent.h
        device/P_3_4_UnitDefinitionContent.c
        device/P_3_5_UnitDefinitionCount.h
        device/P_3_5_UnitDefinitionCount.c
        device/P_3_6_UnitDefinitionIndex.h
        device/P_3_6_UnitDefinitionIndex.c
        device/A_3_1_AddUnitDefinition.h
        device/A_3_1_AddUnitDefinition.c
        device/A_3_2_RemoveUnitDefinition.h
        device/A_3_2_RemoveUnitDefinition.c
        device/A_3_3_ModifyUnitDefinition.h
        device/A_3_3_ModifyUnitDefinition.c
        device/A_3_4_GetUnitDefinition.h
        device/A_3_4_GetUnitDefinition.c
        device/S_4_ModbusUnitManagement.h
        device/S_4_ModbusUnitManagement.c
        device/P_4_1_UnitId.h
        device/P_4_1_UnitId.c
        device/P_4_2_UnitName.h
        device/P_4_2_UnitName.c
        device/P_4_3_UnitSerialNumber.h
        device/P_4_3_UnitSerialNumber.c
        device/P_4_4_UnitDefinitionId.h
        device/P_4_4_UnitDefinitionId.c
        device/P_4_5_UnitCount.h
        device/P_4_5_UnitCount.c
        device/P_4_6_UnitIndex.h
        device/P_4_6_UnitIndex.c
        device/A_4_1_AddUnit.h
        device/A_4_1_AddUnit.c
        device/A_4_2_RemoveUnit.h
        device/A_4_2_RemoveUnit.c
        device/A_4_3_ModifyUnit.h
        device/A_4_3_ModifyUnit.c
        device/A_4_4_GetUnit.h
        device/A_4_4_GetUnit.c
        device/S_5_ModbusCollector.h
        device/S_5_ModbusCollector.c
        device/P_5_1_CollectInterval.h
        device/P_5_1_CollectInterval.c
        device/P_5_2_CollectingStatus.h
        device/P_5_2_CollectingStatus.c
        device/A_5_1_StartCollecting.h
        device/A_5_1_StartCollecting.c
        device/A_5_2_StopCollecting.h
        device/A_5_2_StopCollecting.c
        )

SET(HANDLER_SRC
        handler/OnActionInvoke.h
        handler/OnActionInvoke.c
        handler/OnPropertyGet.h
        handler/OnPropertyGet.c
        handler/OnPropertySet.h
        handler/OnPropertySet.c
        handler/S_1_DeviceInformation/S_1_DeviceInformation_doGet.h
        handler/S_1_DeviceInformation/S_1_DeviceInformation_doGet.c
        handler/S_1_DeviceInformation/S_1_DeviceInformation_doSet.h
        handler/S_1_DeviceInformation/S_1_DeviceInformation_doSet.c
        handler/S_1_DeviceInformation/S_1_DeviceInformation_doInvoke.h
        handler/S_1_DeviceInformation/S_1_DeviceInformation_doInvoke.c
        handler/S_2_ModbusController/S_2_ModbusController_doGet.h
        handler/S_2_ModbusController/S_2_ModbusController_doGet.c
        handler/S_2_ModbusController/S_2_ModbusController_doSet.h
        handler/S_2_ModbusController/S_2_ModbusController_doSet.c
        handler/S_2_ModbusController/S_2_ModbusController_doInvoke.h
        handler/S_2_ModbusController/S_2_ModbusController_doInvoke.c
        handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doGet.h
        handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doGet.c
        handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doSet.h
        handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doSet.c
        handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doInvoke.h
        handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doInvoke.c
        handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doGet.h
        handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doGet.c
        handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doSet.h
        handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doSet.c
        handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doInvoke.h
        handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doInvoke.c
        handler/S_5_ModbusCollector/S_5_ModbusCollector_doGet.h
        handler/S_5_ModbusCollector/S_5_ModbusCollector_doGet.c
        handler/S_5_ModbusCollector/S_5_ModbusCollector_doSet.h
        handler/S_5_ModbusCollector/S_5_ModbusCollector_doSet.c
        handler/S_5_ModbusCollector/S_5_ModbusCollector_doInvoke.h
        handler/S_5_ModbusCollector/S_5_ModbusCollector_doInvoke.c
        )

SET(SRC
        ${DEVICE_SRC}
        ${HANDLER_SRC}
        print/PrintValue.h
        print/PrintValue.c
        iid/IID.h
        DeviceMonitor.h
        DeviceMonitor.c
        DeviceStack.h
        DeviceStack.c
        CommandReader.h
        CommandReader.c
        main.c
        tiny_print_mem.c
        tiny_sleep.c
        )

ADD_EXECUTABLE(sample_generic_loading_static ${SRC})
TARGET_LINK_LIBRARIES(sample_generic_loading_static
        xcpws_static
        xcp_webcmd_static
        xcp_message_codec_static
        xcp_message_static
        xcp_common_static
        ${DEPENDENCE_LIB})
