#-----------------------------------------------------------------------------
#
# sample_generic_loading_static
#
#-----------------------------------------------------------------------------

SET(DEVICE_SRC
        device/definition/ModbusMaster.h
        device/definition/ModbusMaster.c
        device/definition/S_1_DeviceInformation.h
        device/definition/S_1_DeviceInformation.c
        device/definition/P_1_1_Manufacturer.h
        device/definition/P_1_1_Manufacturer.c
        device/definition/P_1_2_Model.h
        device/definition/P_1_2_Model.c
        device/definition/P_1_3_SerialNumber.h
        device/definition/P_1_3_SerialNumber.c
        device/definition/P_1_4_FirmwareRevision.h
        device/definition/P_1_4_FirmwareRevision.c
        device/definition/S_2_ModbusController.h
        device/definition/S_2_ModbusController.c
        device/definition/P_2_1_UnitId.h
        device/definition/P_2_1_UnitId.c
        device/definition/P_2_2_OffsetAddress.h
        device/definition/P_2_2_OffsetAddress.c
        device/definition/P_2_3_NumberOfDiscreteInputs.h
        device/definition/P_2_3_NumberOfDiscreteInputs.c
        device/definition/P_2_4_NumberOfCoils.h
        device/definition/P_2_4_NumberOfCoils.c
        device/definition/P_2_5_NumberOfRegisters.h
        device/definition/P_2_5_NumberOfRegisters.c
        device/definition/P_2_6_NumberOfBytes.h
        device/definition/P_2_6_NumberOfBytes.c
        device/definition/P_2_7_CoilValue.h
        device/definition/P_2_7_CoilValue.c
        device/definition/P_2_8_CoilValues.h
        device/definition/P_2_8_CoilValues.c
        device/definition/P_2_9_DiscreteInputValues.h
        device/definition/P_2_9_DiscreteInputValues.c
        device/definition/P_2_10_RegisterValues.h
        device/definition/P_2_10_RegisterValues.c
        device/definition/P_2_11_RegisterValue.h
        device/definition/P_2_11_RegisterValue.c
        device/definition/A_2_1_ReadDiscreteInputs.h
        device/definition/A_2_1_ReadDiscreteInputs.c
        device/definition/A_2_2_ReadCoils.h
        device/definition/A_2_2_ReadCoils.c
        device/definition/A_2_3_WriteSingleCoil.h
        device/definition/A_2_3_WriteSingleCoil.c
        device/definition/A_2_4_WriteMultipleCoils.h
        device/definition/A_2_4_WriteMultipleCoils.c
        device/definition/A_2_5_ReadInputRegisters.h
        device/definition/A_2_5_ReadInputRegisters.c
        device/definition/A_2_6_ReadMultipleHoldingRegisters.h
        device/definition/A_2_6_ReadMultipleHoldingRegisters.c
        device/definition/A_2_7_WriteSingleHoldingRegister.h
        device/definition/A_2_7_WriteSingleHoldingRegister.c
        device/definition/A_2_8_WriteMultipleHoldingRegisters.h
        device/definition/A_2_8_WriteMultipleHoldingRegisters.c
        device/definition/E_2_1_InputRegistersChanged.h
        device/definition/E_2_1_InputRegistersChanged.c
        device/definition/S_3_ModbusUnitDefinitionManagement.h
        device/definition/S_3_ModbusUnitDefinitionManagement.c
        device/definition/P_3_1_UnitDefinitionId.h
        device/definition/P_3_1_UnitDefinitionId.c
        device/definition/P_3_2_UnitDefinitionName.h
        device/definition/P_3_2_UnitDefinitionName.c
        device/definition/P_3_3_UnitDefinitionDescription.h
        device/definition/P_3_3_UnitDefinitionDescription.c
        device/definition/P_3_4_UnitDefinitionContent.h
        device/definition/P_3_4_UnitDefinitionContent.c
        device/definition/P_3_5_UnitDefinitionCount.h
        device/definition/P_3_5_UnitDefinitionCount.c
        device/definition/P_3_6_UnitDefinitionIndex.h
        device/definition/P_3_6_UnitDefinitionIndex.c
        device/definition/A_3_1_AddUnitDefinition.h
        device/definition/A_3_1_AddUnitDefinition.c
        device/definition/A_3_2_RemoveUnitDefinition.h
        device/definition/A_3_2_RemoveUnitDefinition.c
        device/definition/A_3_3_ModifyUnitDefinition.h
        device/definition/A_3_3_ModifyUnitDefinition.c
        device/definition/A_3_4_GetUnitDefinition.h
        device/definition/A_3_4_GetUnitDefinition.c
        device/definition/S_4_ModbusUnitManagement.h
        device/definition/S_4_ModbusUnitManagement.c
        device/definition/P_4_1_UnitId.h
        device/definition/P_4_1_UnitId.c
        device/definition/P_4_2_UnitName.h
        device/definition/P_4_2_UnitName.c
        device/definition/P_4_3_UnitSerialNumber.h
        device/definition/P_4_3_UnitSerialNumber.c
        device/definition/P_4_4_UnitDefinitionId.h
        device/definition/P_4_4_UnitDefinitionId.c
        device/definition/P_4_5_UnitCount.h
        device/definition/P_4_5_UnitCount.c
        device/definition/P_4_6_UnitIndex.h
        device/definition/P_4_6_UnitIndex.c
        device/definition/A_4_1_AddUnit.h
        device/definition/A_4_1_AddUnit.c
        device/definition/A_4_2_RemoveUnit.h
        device/definition/A_4_2_RemoveUnit.c
        device/definition/A_4_3_ModifyUnit.h
        device/definition/A_4_3_ModifyUnit.c
        device/definition/A_4_4_GetUnit.h
        device/definition/A_4_4_GetUnit.c
        device/definition/S_5_ModbusCollector.h
        device/definition/S_5_ModbusCollector.c
        device/definition/P_5_1_CollectInterval.h
        device/definition/P_5_1_CollectInterval.c
        device/definition/P_5_2_CollectingStatus.h
        device/definition/P_5_2_CollectingStatus.c
        device/definition/A_5_1_StartCollecting.h
        device/definition/A_5_1_StartCollecting.c
        device/definition/A_5_2_StopCollecting.h
        device/definition/A_5_2_StopCollecting.c
        device/handler/OnActionInvoke.h
        device/handler/OnActionInvoke.c
        device/handler/OnPropertyGet.h
        device/handler/OnPropertyGet.c
        device/handler/OnPropertySet.h
        device/handler/OnPropertySet.c
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doGet.h
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doGet.c
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doSet.h
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doSet.c
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doInvoke.h
        device/handler/S_1_DeviceInformation/S_1_DeviceInformation_doInvoke.c
        device/handler/S_2_ModbusController/S_2_ModbusController_doGet.h
        device/handler/S_2_ModbusController/S_2_ModbusController_doGet.c
        device/handler/S_2_ModbusController/S_2_ModbusController_doSet.h
        device/handler/S_2_ModbusController/S_2_ModbusController_doSet.c
        device/handler/S_2_ModbusController/S_2_ModbusController_doInvoke.h
        device/handler/S_2_ModbusController/S_2_ModbusController_doInvoke.c
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doGet.h
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doGet.c
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doSet.h
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doSet.c
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doInvoke.h
        device/handler/S_3_ModbusUnitDefinitionManagement/S_3_ModbusUnitDefinitionManagement_doInvoke.c
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doGet.h
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doGet.c
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doSet.h
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doSet.c
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doInvoke.h
        device/handler/S_4_ModbusUnitManagement/S_4_ModbusUnitManagement_doInvoke.c
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doGet.h
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doGet.c
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doSet.h
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doSet.c
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doInvoke.h
        device/handler/S_5_ModbusCollector/S_5_ModbusCollector_doInvoke.c
        device/print/PrintValue.h
        device/print/PrintValue.c
        device/iid/IID.h
        device/initializer/InitializeConfiguration.h
        device/initializer/InitializeConfiguration.c
        )

SET(SRC
        ${DEVICE_SRC}
        DeviceMonitor.h
        DeviceMonitor.c
        DeviceStack.h
        DeviceStack.c
        CommandReader.h
        CommandReader.c
        main.c
        )

ADD_EXECUTABLE(sample_generic_loading_static ${SRC})
TARGET_LINK_LIBRARIES(sample_generic_loading_static
        xcpws_static
        xcp_webcmd_static
        xcp_message_codec_static
        xcp_message_static
        xcp_common_static
        ${DEPENDENCE_LIB})
